fixed alignment for timepicker

--- a/css/bootstrap-timepicker.css
+++ b/css/bootstrap-timepicker.css
@@ -47,6 +47,11 @@
     position: absolute;
     top: -7px;
 }
+
+.bootstrap-timepicker-widget.pull-right.dropdown-menu:before{
+    left: auto;
+    right: 9px;
+}
 .bootstrap-timepicker-widget.dropdown-menu:after {
     border-bottom: 6px solid #FFFFFF;
     border-left: 6px solid transparent;
@@ -56,6 +61,10 @@
     left: 10px;
     position: absolute;
     top: -6px;
+}
+.bootstrap-timepicker-widget.pull-right.dropdown-menu:after{
+    left: auto;
+    right: 10;
 }
 .bootstrap-timepicker-widget a.btn,
 .bootstrap-timepicker-widget input {
