--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5249,7 +5249,6 @@ input[type="submit"].btn.btn-mini {
   position: relative;
   max-height: 400px;
   padding: 15px;
-  overflow-y: auto;
 }
 
 .modal-form {
